# VkEngine

./: .gitignore  meson.build
shaders/: frag.hlsl  gradient.comp.hlsl  vert.hlsl
src/: common.h  engine.cpp  engine.h  input.cpp  input.h  main.cpp  window.h
src/renderer/: vk_common.h  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initialisers.cpp  vk_initialisers.h  vk_pipelines.cpp  vk_pipelines.h  vk_renderer.cpp  vk_renderer.h
